source/references/3.4.0/man/config.markdown
---
layout: default
nav: references_man.html
title: puppet config Man Page
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-config</code> - <span class="man-whatis">Interact with Puppet's configuration options.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet config <var>action</var></p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any configuration parameter that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
configuration parameters, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="http://docs.puppetlabs.com/references/stable/configuration.html" data-bare-link="true">http://docs.puppetlabs.com/references/stable/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<dl>
<dt><code>print</code> - Examine Puppet's current configuration settings.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet config print (all | <var>setting</var> [<var>setting</var> ...]</p>

<p><code>DESCRIPTION</code></p>

<p>Prints the value of a single configuration option or a list of
configuration options.</p>

<p>This action is an alternate interface to the information available with
<code>puppet &lt;subcommand> --configprint</code>.</p>

<p><code>RETURNS</code></p>

<p>A single value when called with one config setting, and a list of
settings and values when called with multiple options or "all."</p>

<p><code>NOTES</code></p>

<p>By default, this action reads the configuration in agent mode.
Use the '--run_mode' and '--environment' flags to examine other
configuration domains.</p></dd>
</dl>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>print</code></p>

<p>Get puppet's runfile directory:</p>

<p>$ puppet config print rundir</p>

<p>Get a list of important directories from the master's config:</p>

<p>$ puppet config print all --run_mode master | grep -E "(path|dir)"</p>

<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2011 by Puppet Labs
Apache 2 license; see COPYING</p>

</div>
